# dspod

./: README.md
dspod_cv1800b/: README.md
dspod_cv1800b/Hardware/: dspod_cv1800b.kicad_pcb  dspod_cv1800b.kicad_pro  dspod_cv1800b.kicad_sch  dspod_cv1800b_BOM.ods
dspod_cv1800b/Software/r4_fft/: README.md  fft_r4_cmsis.c  fft_r4_cmsis.h
dspod_esp32s3/: README.md
dspod_esp32s3/Firmware/: README.md
dspod_esp32s3/Firmware/adc/: CMakeLists.txt
dspod_esp32s3/Firmware/adc/main/: CMakeLists.txt  eb_adc.c  eb_adc.h  main.c
dspod_esp32s3/Firmware/app/: sdkconfig
dspod_esp32s3/Firmware/app/main/: CMakeLists.txt  audio.c  audio.h  eb_adc.c  eb_adc.h  eb_i2s.c  eb_nau88c22.c  eb_nau88c22.h  fx.c  fx.h  fx_cdl.c  fx_filters.c  fx_vca.c  gfx.c  ifilter_mg4_v1.c  main.c  main.h  menu.c  multicore_audio.c  multicore_audio.h  st7789_drvr.c
dspod_esp32s3/Firmware/blinky/: sdkconfig
dspod_esp32s3/Firmware/blinky/main/: blinky_main.c
dspod_esp32s3/Firmware/encoder/: sdkconfig
dspod_esp32s3/Firmware/encoder/main/: CMakeLists.txt  encoder.c  encoder.h  main.c
dspod_esp32s3/Firmware/i2s_codec/: CMakeLists.txt
dspod_esp32s3/Firmware/i2s_codec/main/: CMakeLists.txt  audio.c  audio.h  eb_i2s.c  eb_i2s.h  main.c  main.h  multicore_audio.c  multicore_audio.h
dspod_esp32s3/Firmware/lcd/: CMakeLists.txt  sdkconfig
dspod_esp32s3/Firmware/lcd/main/: CMakeLists.txt  gfx.h  main.c  main.h  st7789_drvr.h
dspod_esp32s3/Hardware/: dspod_esp32s3.kicad_pcb  dspod_esp32s3.kicad_pro  dspod_esp32s3.kicad_sch
dspod_h7r3/: README.md
dspod_h7r3/Firmware/: README.md
dspod_h7r3/Firmware/CMSIS/: startup_stm32h7r3xx.s
dspod_h7r3/Firmware/adc/: Makefile  main.c
dspod_h7r3/Firmware/app/: Makefile  audio.c  audio.h  codec.c  codec.h  do_gdb.sh  do_oocd.sh  export.sh  fx.c  fx.h  fx_cdl.c  fx_cdl_ext.c  fx_cdl_ext.h  fx_filters.c  fx_vca.c  ifilter_mg4_v1.c  main.c  main.h  menu.c
dspod_h7r3/Firmware/blinky/: Makefile  main.c  main.h  stm32h7r3xx_flash.ld
dspod_h7r3/Firmware/blinky_uf2/: .#Makefile.1.1  .gdbinit  Makefile  flash_cmd.gdb  main.c  main.uf2  stm32h7r3xx_flash_uf2.ld  uf2conv.py
dspod_h7r3/Firmware/common/: adc.c  adc.h  cyclesleep.c  cyclesleep.h  debounce.h  dsp_lib.h  font_8x8.c  font_8x8.h  gfx.c  gfx.h  i2s.c  i2s.h  led.c  led.h  psram_buff.c  psram_buff.h  shared_i2c.c  shared_i2c.h  shared_spi.c  shared_spi.h  st7789.c  st7789.h  systick.c  systick.h  usart.c  usart.h  xspi.c  xspi.h  xspi_save.c
dspod_h7r3/Firmware/cubemx/: .#cubemx.ioc.1.1  .mxproject  cubemx.ioc
dspod_h7r3/Firmware/encoder/: Makefile  main.c
dspod_h7r3/Firmware/flash/: Makefile  main.c  main.h  stm32h7r3xx_flash.ld
dspod_h7r3/Firmware/i2s_codec/: Makefile  audio.c  audio.h  codec.c  main.c
dspod_h7r3/Firmware/lcd/: Makefile  main.c
dspod_h7r3/Firmware/psram/: Makefile  main.c  openocd_stlink.cfg
dspod_h7r3/Hardware/: dspod_h7r3.kicad_pcb  dspod_h7r3.kicad_pro  dspod_h7r3.kicad_sch
dspod_module/: README.md
dspod_module/Hardware/: dspod_module.kicad_pcb  dspod_module.kicad_pro  dspod_module.kicad_sch  dspod_module_BOM.ods
dspod_module/Hardware/dspod_panel/: dspod_panel.kicad_pcb  dspod_panel.kicad_pro  dspod_panel.kicad_sch
dspod_rp2350/: README.md
dspod_rp2350/Firmware/: README.md
dspod_rp2350/Firmware/dspod_adc/: CMakeLists.txt  adc.c  dspod_adc.c
dspod_rp2350/Firmware/dspod_app/: CMakeLists.txt  adc.c  audio.c  audio.h  button.c  button.h  circbuf.c  cyclesleep.c  dsp_lib.c  dsp_lib.h  dspod_app.ld  fx.c  fx.h  fx_cdl.c  fx_filters.c  fx_vca.c  gateio.h  gfx.c  i2s_fulldup.c  i2s_fulldup.h  ifilter_mg4_v1.c  led.c  main.c  main.h  menu.c  menu.h  nau88c22.c  st7789.h  widgets.c
dspod_rp2350/Firmware/dspod_blinky/: CMakeLists.txt  dspod_blink.c
dspod_rp2350/Firmware/dspod_i2s/: CMakeLists.txt  audio.c  i2s_fulldup.c  i2s_fulldup.h  i2s_fulldup.pio  main.c  nau88c22.c
dspod_rp2350/Firmware/dspod_lcd/: CMakeLists.txt  cyclesleep.h  gfx.c  gfx.h  main.c
dspod_rp2350/Firmware/dspod_psram/: CMakeLists.txt  dspod_psram.c
dspod_rp2350/Firmware/dspod_test/: CMakeLists.txt  adc.h  audio.c  audio.h  button.c  button.h  cyclesleep.c  gateio.c  gfx.c  gfx.h  led.h  main.c  st7789.c
dspod_rp2350/Hardware/: dspod_rp2350.kicad_pcb  dspod_rp2350.kicad_pro  dspod_rp2350.kicad_sch
dspod_rp2350/doc/: dspod_rp2350_BOM.ods
dspod_u3c5/: README.md
dspod_u3c5/Hardware/: dspod_u3c5.kicad_pcb  dspod_u3c5.kicad_pro  dspod_u3c5.kicad_sch
dspod_up5k/: README.md
dspod_up5k/Hardware/: dspod_up5k.kicad_pcb  dspod_up5k.kicad_pro  dspod_up5k.kicad_sch
