idf_component_register(SRCS "main.c" "gfx.c" "st7789_drvr.c"
					"encoder.c" "eb_nau88c22.c" "eb_adc.c" "eb_i2s.c"
					"menu.c" "audio.c" "multicore_audio.c" "dsp_lib.c"
					"debounce.c" "widgets.c" "fx.c"
					"fx_vca.c"
					"fx_filters.c" "ifilter_mg4_v1.c"
					"fx_cdl.c"
                    INCLUDE_DIRS "")
